# effective_mobile_test

./: README.md  main.py  pyproject.toml  requirements.txt
app/: implemented.py  settings.py
app/classes/: interface.py  phonebook.py
app/database/: book.json  utils.py
app/models/: users.py
